package org.abdellah.citronix.model;

public enum Saison {
    HIVER, PRINTEMPS, ETE, AUTOMNE
}
